# Heavy-Neutrino-Limits

./: .gitignore  0_limits_mixing.ipynb  10_NSMEFT_4fermion_CC_LNQd.ipynb  11_NSMEFT_4fermion_CC_QuNL.ipynb  1_NSMEFT_LHN.ipynb  2_NSMEFT_bosonic_NC.ipynb  3_NSMEFT_bosonic_CC.ipynb  4_NSMEFT_moment_NB.ipynb  5_NSMEFT_moment_NW.ipynb  6_NSMEFT_4fermion_NC_ff.ipynb  7_NSMEFT_4fermion_NC_QN.ipynb  8_NSMEFT_4fermion_LNLell.ipynb  9_NSMEFT_4fermion_CC_duNell.ipynb  README.md  TMM_plots.ipynb  TODO.md  inv_plots.ipynb  invisible_hnls.ipynb  main_plotter.ipynb  nf03_plots.ipynb  plot_constraints.ipynb  pyproject.toml  setup.cfg  setup.py  std_plots.ipynb  std_plots_dominant.ipynb  std_plots_dominant_final.ipynb  to-do-list.md
Nlimits/: __init__.py  constraint_dict.py  hnl_tools.py  muon_dict.py  plot_tools.py  plotter.py  tau_dict.py  tex_tools.py  ue4.py  umu4.py  utau4.py
combined_limits/: Ue4_inv.npy  Umu4_inv.npy  Utau4_inv.npy
data/1805.08567/: upper_SHIP.dat#
data/ATLAS_2019/: Table4.csv  Table6.csv  Table7.csv
data/ATLAS_2022/: CLfor1SFHeDiracmodel.csv  (+13 more)
mathematica/: pi0_to_inv.nb  test_WR.nb
pylatex/: article.bbl  article.bib  article.tex
tex_files/: bosonicCC_plots.aux  bosonicCC_plots.bbl  bosonicCC_plots.bib  bosonicCC_plots.fdb_latexmk  bosonicCC_plots.fls  bosonicCC_plots.tex  bosonicNC_plots.aux  bosonicNC_plots.bib  bosonicNC_plots.fdb_latexmk  bosonicNC_plots.fls  bosonicNC_plots.tex  hd_plots.aux  hd_plots.bbl  hd_plots.bib  hd_plots.blg  hd_plots.fdb_latexmk  hd_plots.fls  hd_plots.tex  mixing_plots.aux  mixing_plots.bbl  mixing_plots.bib  mixing_plots.blg  mixing_plots.fdb_latexmk  mixing_plots.fls  mixing_plots.tex  std_plots.bbl  std_plots.bib  std_plots.fdb_latexmk  std_plots.fls  std_plots.tex  stdplots.bib
(+112 files in other folders)
