[metadata]
name = HNLimits
authors = [
    { name="Enrique Fernandez-Martinez"},
    { name="Manuel Gonzalez-Lopez"},
    { name="Josu Hernandez-Garcia", email="garcia.josu.hernandez@ttk.elte.hu"},
    { name="Matheus Hostert", email="mhostert@pitp.ca"},
    { name="Jacobo Lopez-Pavon"},
    ]

author_email = "mhostert@pitp.ca"
version = attr: HNLimits.__version__
license = "MIT"
description = A collection of limits on heavy neutral leptons, including their nuSMEFT interactions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mhostert/heavy-neutrino-limits
classifiers =
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
zip_safe = False
package_dir = 
	=src

packages = find:

python_requires = >=3.7

install_requires =
	numpy
	scipy
	pandas>=1.0
	Particle
	matplotlib
    hepunits
    pylatex

[options.packages.find]
where = src

[options.package_data]
* = 
	include/*/*.dat
	include/*/*.txt
	include/*/*.py
	include/*/*/*.dat
	include/*/*/*.txt
	include/*/*/*.py
	include/assets/*

HNLimits = py.typed

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24
	pyarrow

# [options.entry_points]
# console_scripts =
# 	update = HNLimits.scripts:update